--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </script>
   <script type="text/javascript">
     (function(){
-        emailjs.init(process.env.email_js_key);
+        emailjs.init(process.env.EMAIL_JS);
     })();
   </script>
 
